--- a/index.html
+++ b/index.html
@@ -107,12 +107,88 @@
 	<!--About Section ends-->
 
     <!-- Academic and Professional Experiences -->
-    
+    <section id="experiences">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Experience</h2>
+                    <hr class="spacer">
+                </div>
+            </div>
+            <div class="row">
+				<h3>Education</h3>
+					<div class=experiences>
+						<div class="col-md-4">
+							<h4>Indiana University Bloomington</h4>
+							<p class="experience-period">
+								Aug 2013 - May 2015
+							</p>
+						</div>
+						<div class="col-md-8"> 
+							<h4>Masters in Computer Science</h4>
+							<p>Key Courses: Advanced Database Concepts, Theory of Computing, Info. Architecture for the Web, Big Data Applications, Hardware System II, Software Engineering II, Malware Threat and Defences, Information Assurance, Systems & Protocol Security, Knowledgebased Artificial Intelligence, Cloud Computing. 
+							</p>
+						</div>
+					</div>
+					<div class=experiences>
+						<div class="col-md-4">
+							<h4>University of Mumbai</h4>
+							<p class="experience-period">
+								Aug 2009 - May 2013
+							</p>
+						</div>
+						<div class="col-md-8">
+							<h4>Bachelors in Information Technology</h4>	
+							<p>Key Courses: Database Technologies, Software Project Management, Internet Programming, Object Oriented Analysis and Design, GUI & DBMS, Information and Network Security, Software Engineering, Programming for Mobile and Remote Computers,Data Structures and Algorithms.  
+						</p>
+						</div>
+					</div>
+            </div>
+			<div class="row">
+				<h3>Career</h3>
+					<div class=experiences>
+						<div class="col-md-4">
+							<h4>Research Assistant</h4>
+							<p class="experience-period">
+								September 2014 - May 2015
+							</p>
+						</div>
+						<div class="col-md-8"> 
+							<h5>Indiana University, Bloomington - PHIT Labs</h5>
+							<p>Worked  as a Technological Lead on the SOLACE project under the guidance of Dr. Kay Connely. My responsibility was to enable the successful migration of the server. The including tasks were 
+								<ul>
+								<li>Database Design</li>
+								<li>Debugging Windows Application Code</li>
+								<li>Testing Hardware Components</li>
+								<li>Installations and Deployment</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+					<div class=experiences>
+						<div class="col-md-4">
+							<h4>Intern</h4>
+							<p class="experience-period">
+								June 2012 - July 2012
+							</p>
+						</div>
+						<div class="col-md-8">
+							<h5>ABM Knowledgeware Ltd.</h5>	
+							<p>Worked as the Summer Intern on the Capital Value Systems project which was being developed for the Municipal Corporation of Greater Mumbai. The project enabled the automation of property tax payment for regions across Mumbai. Job responsibilities included
+							<ul>
+							<li>White Box testing on the Web forms</li>
+							<li>Understanding the code and the functionality of the system</li>
+							</ul>
+							</p>
+						</div>
+					</div>
+            </div>
+        </div> <!--Container ends-->
+    </section>
 		<!--Section experiences ends-->
 		
 	<!-- Projects Section-->\
 	
-	<!--Projects ends>	
 
 
     <!-- Contact Section -->
