--- a/index.html
+++ b/index.html
@@ -188,7 +188,136 @@
 		<!--Section experiences ends-->
 		
 	<!-- Projects Section-->\
-	
+	<section id="projects" style="background-color: #D7D5DE">
+        <div class="container">
+		   <div class="row"">
+                <div class="col-lg-12 text-center">
+                    <h2>Academic Projects</h2>
+                    <hr class="spacer">
+                </div>
+            <div class="row">
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Web Calculator<h3>
+						<p>May 2015</p>
+						<p class="small" style= "text-align:justify;">
+						Designed and developed a web calculator that implements addition, subtraction, multiplication, division, square root and clear screen functionality. The calculator is also equipped with a button that allows the user to switch between dark and light themes.<br>
+						<b>Technologies: HTML5, CSS3, JavaScript</b>
+						</p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Property Rate Prediction System<h3>
+						<p>March 2015 - May 2015</p>
+						<p class="small" style= "text-align:justify;">
+						Used Case-based reasoning to predict the rents of the house in the particular area. The system proceeded by taking six parameter from the user and finding the nearest neighbours from the case-base. The case base was filtered by using a rules-based approach to calculate the final rent.<br>
+						<b>Technologies: Java</b>
+						</p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Cloud Computing Projects<h3>
+						<p>January 2015 - May 2015</p>
+						<p class="small" style= "text-align:justify;">
+						Included projects on Hadoop BLAST, Page Rank, Pig K-means and also created a search engine by creating an inverted index and storing it on the HDFS<br>
+						<b>Technologies: Hadoop-BLAST, Hadoop MapReduce, HDFS, Pig, Page Rank. </b>
+						</p>
+					</article>
+				</div>
+			</div>
+			<div class="row">	
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Thanksgiving<h3>
+						<p>September 2014 - December 2014</p>
+						<p class="small" style= "text-align:justify;">
+						A team of four members, built a task management system for roommates to create, assign, edit and track daily chores to be shared among roommates.<br>
+						<b>Technologies: Agile Methodology, Java Servlets, Java Server Pages, Bootstrap (HTML, CSS, JavaScript), My SQL 6.2, Eclipse Luna IDE and Tomcat v70 </b>
+						</p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Logic Vulnerabilities in Web Applications<h3>
+						<p>October 2014 - December 2014</p>
+						<p class="small" style= "text-align:justify;">
+						A research project that focused on the analysis of web vulnerabilities that are specific to the functionality of the application. Analyzed the common logic flaws in website development and demonstrated three attacks targeting them. A comparative analysis of detection prototypes including Waler, MiMoSa, Swaddler, BLOCK and Inte-Guard. 
+						</p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Analysis of VirusTotal Android Applications<h3>
+						<p>November 2014 - December 2014</p>
+						<p class="small" style= "text-align:justify;">
+						Compiled the results after tests on 228 android applications on Google PlayStore. Results showed many cases of false positives including some of the most downloaded applications like Yelp. Discovered the existence of malicious applications on PlayStore like Talking Tom Cat 2 Free, Subway Surfers Free Tips.
+						</p>
+					</article>
+				</div>
+			</div>
+			<div class="row">	
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>The Step Counter<h3>
+						<p>March 2014 - May 2014</p>
+						<p class="small" style= "text-align:justify;">
+						Designed and implemented a pedometer using an STM32 board. The accelerometer was interfaced with the STM32 board using C. The data coming from the accelerometer was logged onto an onboard SD card. The data in the SD card was parsed using a Java code on the user's workstation.   
+						<b>Technologies: C, Accelerometer, STM32 micocontroller</b></p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Altimeter<h3>
+						<p>February 2014</p>
+						<p class="small" style= "text-align:justify;">
+						Developed an altimeter using STM32  microcontroller which could measure the altitude of the building with the help of a pressure sensor and a temperature sensor. The system was integrated with a memory card which was used to store the recorded data. 
+						<b>Technologies: C, STM32 microcontroller</b></p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Chavista<h3>
+						<p>April 2014 - May 2014</p>
+						<p class="small" style= "text-align:justify;">
+						Developed a responsive website that displays a collection of Indian recipes using the Bootstrap framework. Includes bootstrap features like Accordion, Carousel, Navigation bar and Modals. 
+						<b>Technologies: Bootstrap Framework, HTML5, CSS3, JavaScript</b></p>
+					</article>
+				</div>
+			</div>
+			<div class="row">	
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Travel Recommendation System<h3>
+						<p>January 2014 - May 2014</p>
+						<p class="small" style= "text-align:justify;">
+						Proposed a research paper for developing a scalable travel recommender system using Cloud, Big Data, and hybrid recommender system (Incorporating content and collaborative filtering system).
+						</p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>IOweU<h3>
+						<p>October 2013 - December 2013</p>
+						<p class="small" style= "text-align:justify;">
+						Developed a web application that enabled the user to conveniently split bills among fellow users and successfully manage shared expenses. Developed using Spring Framework. Used MySQL on server side which was called using jQuery and AJAX from the client side. Used the Bootstrap Framework for front end. 
+						<b>Technologies: Spring Framework, MySQL, Ajax, jQuery, JavaScript, HTML5, CSS3, Bootstrap Framework</b></p>
+					</article>
+				</div>
+				<div class="col-md-4">
+					<article class="projects">
+						<h3>Biometric Authentication for ATM<h3>
+						<p>August 2012 - May 2013</p>
+						<p class="small" style= "text-align:justify;">
+						Helped in eliminating the use of ATM cards for ATM transactions by replacing them with biometric authentication. VB.net, Java and VB6 were used for front-end development. MS SQL Server and MS Access were used at the back-end. Minutiae extraction algorithm was used for feature extraction and pattern matching.
+						<b> Technologies: Java, VB6, VB.NET, Ms SQL Server, MS Access</b></p>
+					</article>
+				</div>
+			</div>
+		</div>	<!--Container ends -->
+	</section>
+	<!--Projects ends>	
 
 
     <!-- Contact Section -->
