Final Website ready

--- a/index.html
+++ b/index.html
@@ -187,7 +187,377 @@
     </section>
 		<!--Section experiences ends-->
 		
-	<!-- Projects Section-->\
+		<!-- Section Skills-->
+	<section id="skills" style="background-color:#EBEBED">
+		<div class="container">
+			<div class="col-lg-12 text-center">
+                    <h2>Skills</h2>
+                    <hr class="spacer">
+            </div>
+			<div class="row">
+				<div class="col-md-6">
+					<ul class="no bullets" style="list-style-type: none;">
+						<li>
+						<span class="skills-title">HTML5</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">CSS3</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">JavaScript</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">jQuery</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">AJAX</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">JSON</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Python</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Linux</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Windows</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">AngularJS</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">XML</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">XSLT</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Adobe Photoshop</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Adobe Dreamweaver</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Eclipse</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Notepad++</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Code Blocks</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">VB6</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<ul class="no bullets" style="list-style-type: none;">
+						<li>
+						<span class="skills-title">Java</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Bootstrap Framework</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">MySQL</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">C++</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">C</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">PHP</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Audrino</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Agile Methodology</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Web Application Security</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Sass</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Less</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Compass</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Microsoft Word</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Microsoft Powerpoint</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Microsoft Excel</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">Microsoft Access</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+						<li>
+						<span class="skills-title">VB.NET</span>
+						<span class="skills-score">
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star filled"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						<span class="glyphicon glyphicon-star"></span>
+						</span>
+						</li>
+					</ul>
+				</div>
+		</div>
+	</section>
+	<!--Skills end-->
+		
+	<!-- Projects Section-->
 	<section id="projects" style="background-color: #D7D5DE">
         <div class="container">
 		   <div class="row"">
@@ -331,8 +701,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
